crates/jsonschema-macros/tests/ui/content_encoding_missing_key.stderr
error: Content encoding `e` requires both `check` and `convert`
 --> tests/ui/content_encoding_missing_key.rs:3:27
  |
3 |     content_encodings = { "e" => { check = crate::c } }
  |                           ^^^
